remove bilibili support